CreationKit: Refactor BSPointerHandleMangerInterface

--- a/skyrim64_test/skyrim64_test.vcxproj.filters
+++ b/skyrim64_test/skyrim64_test.vcxproj.filters
@@ -332,9 +332,6 @@
     <ClInclude Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\patches\CKSSE\BSPointerHandle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\patches\CKSSE\BSShaderResourceManager_CK.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -360,6 +357,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\patches\CKSSE\TESWater.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\patches\CKSSE\BSHandleRefObject_CK.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\patches\CKSSE\BSPointerHandleManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -562,9 +565,6 @@
     <ClCompile Include="src\patches\TES\bhkThreadMemorySource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\patches\patches_ckit.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\winhttp_exports.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -575,9 +575,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\patches\CKSSE\BSPointerHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\CKSSE\BSShaderResourceManager_CK.cpp">
@@ -599,6 +596,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\patches\CKSSE\Experimental.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\patches\patches_sseck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\patches\CKSSE\BSPointerHandleManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
