--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -162,7 +162,8 @@
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\INIReader.h" />
     <ClInclude Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.h" />
-    <ClInclude Include="src\patches\CKSSE\BSPointerHandle.h" />
+    <ClInclude Include="src\patches\CKSSE\BSHandleRefObject_CK.h" />
+    <ClInclude Include="src\patches\CKSSE\BSPointerHandleManager.h" />
     <ClInclude Include="src\patches\CKSSE\BSShaderResourceManager_CK.h" />
     <ClInclude Include="src\patches\CKSSE\Editor.h" />
     <ClInclude Include="src\patches\CKSSE\EditorUI.h" />
@@ -278,7 +279,7 @@
   <ItemGroup>
     <ClCompile Include="src\patches\bnet.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.cpp" />
-    <ClCompile Include="src\patches\CKSSE\BSPointerHandle.cpp" />
+    <ClCompile Include="src\patches\CKSSE\BSPointerHandleManager.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSShaderResourceManager_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\LogWindow.cpp" />
     <ClCompile Include="src\patches\CKSSE\TESFile_CK.cpp" />
