--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.h" />
     <ClInclude Include="src\patches\CKSSE\BSHandleRefObject_CK.h" />
     <ClInclude Include="src\patches\CKSSE\BSPointerHandleManager.h" />
+    <ClInclude Include="src\patches\CKSSE\BSRenderPass_CK.h" />
     <ClInclude Include="src\patches\CKSSE\BSShaderResourceManager_CK.h" />
     <ClInclude Include="src\patches\CKSSE\Editor.h" />
     <ClInclude Include="src\patches\CKSSE\EditorUI.h" />
@@ -281,10 +282,12 @@
     <ClCompile Include="src\patches\bnet.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSGraphicsRenderTargetManager_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSPointerHandleManager.cpp" />
+    <ClCompile Include="src\patches\CKSSE\BSRenderPass_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSShaderResourceManager_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\LogWindow.cpp" />
     <ClCompile Include="src\patches\offsets.cpp" />
     <ClCompile Include="src\patches\CKSSE\TESFile_CK.cpp" />
+    <ClCompile Include="src\patches\TES\BSRenderPass.cpp" />
     <ClCompile Include="src\patches\TES\NiMain\NiCollisionUtils.cpp" />
     <ClCompile Include="src\winhttp_exports.cpp" />
     <ClCompile Include="src\common.cpp" />
