--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -7,6 +7,7 @@
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
+UIDarkTheme=false                   ; [Experimental] Enable dark theme. This may cause graphical issues.
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
