--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="src\patches\CKSSE\BSShaderResourceManager_CK.h" />
     <ClInclude Include="src\patches\CKSSE\Editor.h" />
     <ClInclude Include="src\patches\CKSSE\EditorUI.h" />
+    <ClInclude Include="src\patches\CKSSE\EditorUIDarkMode.h" />
     <ClInclude Include="src\patches\CKSSE\Experimental.h" />
     <ClInclude Include="src\patches\CKSSE\LogWindow.h" />
     <ClInclude Include="src\patches\CKSSE\NavMesh.h" />
@@ -284,6 +285,7 @@
     <ClCompile Include="src\patches\CKSSE\BSPointerHandleManager.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSRenderPass_CK.cpp" />
     <ClCompile Include="src\patches\CKSSE\BSShaderResourceManager_CK.cpp" />
+    <ClCompile Include="src\patches\CKSSE\EditorUIDarkMode.cpp" />
     <ClCompile Include="src\patches\CKSSE\LogWindow.cpp" />
     <ClCompile Include="src\patches\offsets.cpp" />
     <ClCompile Include="src\patches\CKSSE\TESFile_CK.cpp" />
