Update INI settings

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -6,8 +6,7 @@
 [CreationKit]
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
-RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
-UIDarkTheme=false                   ; [Experimental] Enable dark theme. This may cause graphical issues.
+UIDarkTheme=false                   ; [Experimental] Enable dark theme. Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
@@ -22,6 +21,7 @@ RenderWindow60FPS=false             ; Force render window to always draw at 60 f
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
 DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
 WarningBlacklist=false              ; In the log, hide specific warnings or errors produced by the vanilla game/DLC ESM files. See [CreationKit_Warnings] section.
+RefrHandleLimitPatch=false          ; Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
 
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
