--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="src\patches\TES\BSTScatterTable.h" />
     <ClInclude Include="src\patches\TES\MemoryContextTracker.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSMultiBoundNode.h" />
+    <ClInclude Include="src\patches\TES\NiMain\BSMultiIndexTriShape.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSNiNode.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSTriShape.h" />
     <ClInclude Include="src\patches\TES\NiMain\common.h" />
