CKSSE: Blacklist DLC warnings after running xEdit QAC

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -194,3 +194,10 @@ W151=QUESTS: Could not find previous info (03003ECA) for TopicInfo (03003ECB) in
 W152=QUESTS: Could not find previous info (03013EF1) for TopicInfo (03013EF2) in Topic "RelationshipAdoption_FGPetTopic" (03013ECB).
 W153=QUESTS: Could not find previous info (0402BA23) for TopicInfo (0402BA24) in Topic "" (0403208A).
 W154=QUESTS: Could not find previous info (04035BFE) for TopicInfo (04035BFF) in Topic "" (0403208D).
+W155=MASTERFILE: Cell contains more than one COC marker:\r\n'POIReach24' (0000711B) (-40, 4) in WorldSpace 'Tamriel' (0000003C)
+W156=MASTERFILE: Invalid prev idle on IDLE Form 'ChildSitOnKnees' (0300ED58)
+W157=MASTERFILE: Invalid prev idle on IDLE Form 'IdleBloodPortalActivate' (0201503B)
+W158=MASTERFILE: Ref 'EncElk' (000D1908) uses location but is not in the unloaded ref data.
+W159=MASTERFILE: Ref 'EncElkFemale' (000D190A) uses location but is not in the unloaded ref data.
+W160=MASTERFILE: Ref 'EncElkFemale' (000D1909) uses location but is not in the unloaded ref data.
+W161=MASTERFILE: Special Ref 'TreasBanditChest' (000CE5FA) with type 'BossContainer' (000130F8) is not in the Special Ref data.
