Update tracy, imgui, and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ shader_analyzer/obj/
 
 skyrim64_test/src/version_info.h
 skyrim64_test/VTune Amplifier Results/
+skyrim64_test/VTune Profiler Results/
