--- a/Dependencies/libtracy.vcxproj.filters
+++ b/Dependencies/libtracy.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClInclude Include="tracy\common\TracyQueue.hpp" />
     <ClInclude Include="tracy\common\TracySocket.hpp" />
     <ClInclude Include="tracy\common\TracySystem.hpp" />
-    <ClInclude Include="tracy\imguicolortextedit\TextEditor.h" />
     <ClInclude Include="tracy\server\IconsFontAwesome5.h" />
     <ClInclude Include="tracy\server\tracy_flat_hash_map.hpp" />
     <ClInclude Include="tracy\server\tracy_pdqsort.h" />
@@ -47,6 +46,63 @@
     <ClInclude Include="tracy\server\TracyView.hpp" />
     <ClInclude Include="tracy\server\TracyWorker.hpp" />
     <ClInclude Include="tracy\Tracy.hpp" />
+    <ClInclude Include="tracy\client\TracyDxt1.hpp" />
+    <ClInclude Include="tracy\client\TracySysTime.hpp" />
+    <ClInclude Include="tracy\client\TracySysTrace.hpp" />
+    <ClInclude Include="tracy\client\TracySysTracePayload.hpp" />
+    <ClInclude Include="tracy\client\TracyCallstack.h" />
+    <ClInclude Include="tracy\client\TracyArmCpuTable.hpp" />
+    <ClInclude Include="tracy\client\tracy_concurrentqueue.h" />
+    <ClInclude Include="tracy\common\TracyApi.h" />
+    <ClInclude Include="tracy\server\tracy_robin_hood.h" />
+    <ClInclude Include="tracy\server\tracy_xxh3.h" />
+    <ClInclude Include="tracy\server\tracy_xxhash.h" />
+    <ClInclude Include="tracy\server\TracyColor.hpp" />
+    <ClInclude Include="tracy\server\TracyMicroArchitecture.hpp" />
+    <ClInclude Include="tracy\server\TracyMmap.hpp" />
+    <ClInclude Include="tracy\server\TracyShortPtr.hpp" />
+    <ClInclude Include="tracy\server\TracyPrint.hpp" />
+    <ClInclude Include="tracy\server\TracySort.hpp" />
+    <ClInclude Include="tracy\server\TracySourceView.hpp" />
+    <ClInclude Include="tracy\server\TracyTaskDispatch.hpp" />
+    <ClInclude Include="tracy\server\TracyTextureCompression.hpp" />
+    <ClInclude Include="tracy\server\TracyThreadCompress.hpp" />
+    <ClInclude Include="tracy\server\TracyUserData.hpp" />
+    <ClInclude Include="tracy\server\TracyViewData.hpp" />
+    <ClInclude Include="tracy\server\TracyYield.hpp" />
+    <ClInclude Include="tracy\zstd\bitstream.h" />
+    <ClInclude Include="tracy\zstd\compiler.h" />
+    <ClInclude Include="tracy\zstd\cpu.h" />
+    <ClInclude Include="tracy\zstd\debug.h" />
+    <ClInclude Include="tracy\zstd\error_private.h" />
+    <ClInclude Include="tracy\zstd\fse.h" />
+    <ClInclude Include="tracy\zstd\hist.h" />
+    <ClInclude Include="tracy\zstd\huf.h" />
+    <ClInclude Include="tracy\zstd\mem.h" />
+    <ClInclude Include="tracy\zstd\pool.h" />
+    <ClInclude Include="tracy\zstd\threading.h" />
+    <ClInclude Include="tracy\zstd\xxhash.h" />
+    <ClInclude Include="tracy\zstd\zstd.h" />
+    <ClInclude Include="tracy\zstd\zstd_compress_internal.h" />
+    <ClInclude Include="tracy\zstd\zstd_compress_literals.h" />
+    <ClInclude Include="tracy\zstd\zstd_compress_sequences.h" />
+    <ClInclude Include="tracy\zstd\zstd_compress_superblock.h" />
+    <ClInclude Include="tracy\zstd\zstd_cwksp.h" />
+    <ClInclude Include="tracy\zstd\zstd_ddict.h" />
+    <ClInclude Include="tracy\zstd\zstd_decompress_block.h" />
+    <ClInclude Include="tracy\zstd\zstd_decompress_internal.h" />
+    <ClInclude Include="tracy\zstd\zstd_double_fast.h" />
+    <ClInclude Include="tracy\zstd\zstd_errors.h" />
+    <ClInclude Include="tracy\zstd\zstd_fast.h" />
+    <ClInclude Include="tracy\zstd\zstd_internal.h" />
+    <ClInclude Include="tracy\zstd\zstd_lazy.h" />
+    <ClInclude Include="tracy\zstd\zstd_ldm.h" />
+    <ClInclude Include="tracy\zstd\zstd_opt.h" />
+    <ClInclude Include="tracy\zstd\zstdmt_compress.h" />
+    <ClInclude Include="tracy\nfd\common.h" />
+    <ClInclude Include="tracy\nfd\nfd.h" />
+    <ClInclude Include="tracy\nfd\nfd_common.h" />
+    <ClInclude Include="tracy\server\TracyTexture.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tracy\client\tracy_rpmalloc.cpp" />
@@ -56,12 +112,53 @@
     <ClCompile Include="tracy\common\tracy_lz4hc.cpp" />
     <ClCompile Include="tracy\common\TracySocket.cpp" />
     <ClCompile Include="tracy\common\TracySystem.cpp" />
-    <ClCompile Include="tracy\imguicolortextedit\TextEditor.cpp" />
     <ClCompile Include="tracy\server\TracyBadVersion.cpp" />
     <ClCompile Include="tracy\server\TracyMemory.cpp" />
     <ClCompile Include="tracy\server\TracyStorage.cpp" />
     <ClCompile Include="tracy\server\TracyView.cpp" />
     <ClCompile Include="tracy\server\TracyWorker.cpp" />
     <ClCompile Include="tracy\TracyClient.cpp" />
+    <ClCompile Include="tracy\client\TracyDxt1.cpp" />
+    <ClCompile Include="tracy\client\TracySysTime.cpp" />
+    <ClCompile Include="tracy\client\TracySysTrace.cpp" />
+    <ClCompile Include="tracy\server\tracy_xxhash.c" />
+    <ClCompile Include="tracy\server\TracyColor.cpp" />
+    <ClCompile Include="tracy\server\TracyFilesystem.cpp" />
+    <ClCompile Include="tracy\server\TracyMicroArchitecture.cpp" />
+    <ClCompile Include="tracy\server\TracyMmap.cpp" />
+    <ClCompile Include="tracy\server\TracyPrint.cpp" />
+    <ClCompile Include="tracy\server\TracySourceView.cpp" />
+    <ClCompile Include="tracy\server\TracyTaskDispatch.cpp" />
+    <ClCompile Include="tracy\server\TracyTextureCompression.cpp" />
+    <ClCompile Include="tracy\server\TracyThreadCompress.cpp" />
+    <ClCompile Include="tracy\server\TracyUserData.cpp" />
+    <ClCompile Include="tracy\zstd\debug.c" />
+    <ClCompile Include="tracy\zstd\entropy_common.c" />
+    <ClCompile Include="tracy\zstd\error_private.c" />
+    <ClCompile Include="tracy\zstd\fse_compress.c" />
+    <ClCompile Include="tracy\zstd\fse_decompress.c" />
+    <ClCompile Include="tracy\zstd\hist.c" />
+    <ClCompile Include="tracy\zstd\huf_compress.c" />
+    <ClCompile Include="tracy\zstd\huf_decompress.c" />
+    <ClCompile Include="tracy\zstd\pool.c" />
+    <ClCompile Include="tracy\zstd\threading.c" />
+    <ClCompile Include="tracy\zstd\xxhash.c" />
+    <ClCompile Include="tracy\zstd\zstd_common.c" />
+    <ClCompile Include="tracy\zstd\zstd_compress.c" />
+    <ClCompile Include="tracy\zstd\zstd_compress_literals.c" />
+    <ClCompile Include="tracy\zstd\zstd_compress_sequences.c" />
+    <ClCompile Include="tracy\zstd\zstd_compress_superblock.c" />
+    <ClCompile Include="tracy\zstd\zstd_ddict.c" />
+    <ClCompile Include="tracy\zstd\zstd_decompress.c" />
+    <ClCompile Include="tracy\zstd\zstd_decompress_block.c" />
+    <ClCompile Include="tracy\zstd\zstd_double_fast.c" />
+    <ClCompile Include="tracy\zstd\zstd_fast.c" />
+    <ClCompile Include="tracy\zstd\zstd_lazy.c" />
+    <ClCompile Include="tracy\zstd\zstd_ldm.c" />
+    <ClCompile Include="tracy\zstd\zstd_opt.c" />
+    <ClCompile Include="tracy\zstd\zstdmt_compress.c" />
+    <ClCompile Include="tracy\nfd\nfd_common.c" />
+    <ClCompile Include="tracy\nfd\nfd_win.cpp" />
+    <ClCompile Include="tracy\server\TracyTexture.cpp" />
   </ItemGroup>
 </Project>
