CKSSE: Allow rebinding some hotkeys

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -7,6 +7,7 @@
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 UIDarkTheme=false                   ; [Experimental] Enable dark theme. Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
+UIHotkeys=false                     ; [Experimental]
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
@@ -36,6 +37,116 @@ Font=Consolas                       ; Any installed system font
 FontSize=10                         ; Size in points
 FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
 OutputFile=none                     ; Print log output to a file (i.e. "log.txt"). May cause UI lag on slow hard drives. To disable, set the value to "none".
+
+[CreationKit_Hotkeys]
+HKFunc_AddPolygon="A"                                        ; Add a polygon
+HKFunc_AlignToPosition="CTRL+SHIFT+A"                        ; Align to position
+HKFunc_AlignToRotation="CTRL+A"                              ; Align to rotation
+HKFunc_AnchorCamera="SHIFT+F"                                ; Anchor the camera
+HKFunc_ChangeDrawMode="W"                                    ; Change draw mode
+HKFunc_ClearSelection="D"                                    ; Clear selection
+HKFunc_ClearSnapReference="ALT+Q"                            ; Clear the snap reference
+HKFunc_Copy="CTRL+C"                                         ; Copy selection
+HKFunc_CreateMultiboundReference="CTRL+B"                    ; Create a multibound reference
+HKFunc_CutSelection="CTRL+X"                                 ; Cut selection
+HKFunc_CycleSelectedVisibility="1"                           ; Cycle the visibility of selected objects
+HKFunc_CycleThroughCameraViews="Y"                           ; Cycle camera view
+HKFunc_DeleteNavMeshSelection="R"                            ; Delete selection
+HKFunc_DeleteSelection="DEL"                                 ; Delete selection
+HKFunc_DropCamera="ALT+Z"                                    ; Drop camera
+HKFunc_DropSelectionToGround="F"                             ; Drop selection to ground
+HKFunc_DropVerticesOrFloodFill="F"                           ; Drop vertices/Flood Fill
+HKFunc_Duplicate="CTRL+D"                                    ; Duplicate selection
+HKFunc_EditLandscape="H"                                     ; Edit landscape
+HKFunc_EditNavmesh="CTRL+E"                                  ; Edit navmesh
+HKFunc_FinalizeCell="CTRL+1"                                 ; Finalize cell
+HKFunc_FindCover="CTRL+2"                                    ; Find cover
+HKFunc_FlagWaterTris="CTRL+ALT+W"                            ; Flag Water Triangles
+HKFunc_FreezeCamera="3"                                      ; Freeze the camera
+HKFunc_HideSelectedNavMeshes="H"                             ; Hide selected navmeshes
+HKFunc_ImportObjectNavmeshes="CTRL+ALT+I"                    ; Import Object Navmeshes
+HKFunc_InverseFloodFill="I"                                  ; Inverse flood fill
+HKFunc_LinkOrBreakPlanesOrRooms="ALT+L"                      ; Link/break planes/rooms
+HKFunc_LoadCellForSelectedObject="CTRL+L"                    ; Load selected object's parent cell
+HKFunc_MergeSelectedVertices="Q"                             ; Merge selected vertices
+HKFunc_MoveClipboardReferences="CTRL+M"                      ; Move clipboard references
+HKFunc_MoveClipboardReferencesInPlace="CTRL+SHIFT+M"         ; Move clipboard references in place
+HKFunc_ObjectPalette="SHIFT+O"                               ; Object palette
+HKFunc_OpenAdvancedGenerationDialog="4"                      ; Open advanced generation dialog
+HKFunc_OpenEdgePropertiesDialog="E"                          ; Open edge properties dialog
+HKFunc_OpenStandardGenerationDialog="3"                      ; Open standard generation dialog
+HKFunc_Paste="CTRL+V"                                        ; Paste clipboard contents
+HKFunc_PasteInPlace="CTRL+SHIFT+V"                           ; Paste clipboard contents in place
+HKFunc_PickingPreferences="/"                                ; Picking preferences
+HKFunc_PlaceCameraAboveSelection="T"                         ; Place camera above selection
+HKFunc_RaiseSelection="ALT+G"                                ; Raise selection
+HKFunc_Redo="CTRL+Y"                                         ; Redo
+HKFunc_Refresh="F5"                                          ; Refresh
+HKFunc_ResetReferenceRotation="CTRL+K"                       ; Reset rotation
+HKFunc_RotateDoubleVertexSelection="TAB"                     ; Rotate double vertex selection
+HKFunc_RotateDoubleVertexSelectionWithControlKey="CTRL+TAB"  ; Rotate double vertex selection
+HKFunc_Save="CTRL+S"                                         ; Save
+HKFunc_SaveAndPushPluginPC="CTRL+SHIFT+S"                    ; Save and push plugin to PC
+HKFunc_SearchAndReplace="CTRL+F"                             ; Search and replace
+HKFunc_SelectTriangleByIndex="CTRL+F"                        ; Select triangle by index
+HKFunc_SetLightFadeScalingKeyDown="CTRL+ALT+S"               ; Scale a light's fade distance
+HKFunc_SetLightFOVScalingKeyDown="ALT+S"                     ; Scale a light's FOV
+HKFunc_SetLightSDBScalingKeyDown="ALT+B"                     ; Scale a light's FOV
+HKFunc_SetManipulationModeRotate="W"                         ; Enter rotation manipulation mode
+HKFunc_SetManipulationModeScale="2"                          ; Enter scale manipulation mode
+HKFunc_SetManipulationModeSelect="R"                         ; Enter selection manipulation mode
+HKFunc_SetManipulationModeTranslate="E"                      ; Enter translation manipulation mode
+HKFunc_SetScalingKeyDown="S"                                 ; Scale a reference
+HKFunc_ShowLandBorders="B"                                   ; Show land borders
+HKFunc_ShowNavCutters="CTRL+SHIFT+N"                         ; Toggle Negative Navmesh Display
+HKFunc_ShowSceneGraph="F10"                                  ; Show scene graph
+HKFunc_SnapDecrement="["                                     ; Decrement snap units
+HKFunc_SnapIncrement="]"                                     ; Increment snap units
+HKFunc_SnapReferences="SHIFT+K"                              ; Resnap References
+HKFunc_SwapEdge="S"                                          ; Swap edge
+HKFunc_SwapEditorWater="CTRL+W"                              ; Swap editor water
+HKFunc_ToggleBatchDialog="-"                                 ; Toggle batch dialog
+HKFunc_ToggleBrightLights="A"                                ; Toggle bright lights
+HKFunc_ToggleCellWindowLoads="ALT+A"                         ; Toggle cell window loads
+HKFunc_ToggleCollisionGeometry="F4"                          ; Toggle collision geometry
+HKFunc_ToggleDebugGeometry="4"                               ; Toggle debug geometry
+HKFunc_ToggleEdgeSelectMode="G"                              ; Toggle edge select mode
+HKFunc_ToggleEnableStateChildrenVisibility="CTRL+1"          ; Toggle visibility of enable state children
+HKFunc_ToggleEnableStateOppositeChildrenVisibility="SHIFT+1" ; Toggle visibility of enable state opposite children
+HKFunc_ToggleFlycam="`"                                      ; Toggle flycam
+HKFunc_ToggleFog="CTRL+5"                                    ; Toggle fog
+HKFunc_ToggleGizmoOrientation="G"                            ; Toggle gizmo orientation
+HKFunc_ToggleGrass="8"                                       ; Toggle grass
+HKFunc_ToggleGrid="="                                        ; Toggle grid
+HKFunc_ToggleHavok="ALT+H"                                   ; Toggle havok
+HKFunc_ToggleLandCulling="SHIFT+L"                           ; Toggle land culling
+HKFunc_ToggleLightMarkers="CTRL+I"                           ; Toggle light markers
+HKFunc_ToggleLightRadius="L"                                 ; Toggle light radius
+HKFunc_ToggleLocationSnap="Q"                                ; Toggle location snap
+HKFunc_ToggleMarkers="M"                                     ; Toggle markers
+HKFunc_ToggleNoLargeCreature="CTRL+L"                        ; Toggle no large creature
+HKFunc_ToggleNonlandCulling="SHIFT+C"                        ; Toggle non-land culling
+HKFunc_ToggleOcclusionPlanes="U"                             ; Toggle occlusion planes
+HKFunc_ToggleOrthographicPerspective="0"                     ; Toggle orthographic perspective
+HKFunc_TogglePickingAgainstTrees="CTRL+T"                    ; Toggle picking against trees
+HKFunc_TogglePortalMode="CTRL+P"                             ; Toggle portal mode
+HKFunc_TogglePreferredOrCreateLedgePortal="P"                ; Toggle preferred or create ledge portal
+HKFunc_ToggleReferenceSnap="SHIFT+Q"                         ; Toggle reference snap
+HKFunc_ToggleRotationSnap="CTRL+Q"                           ; Toggle rotation snap
+HKFunc_ToggleSelectionCulling="CTRL+SHIFT+C"                 ; Toggle selection culling
+HKFunc_ToggleShadows="5"                                     ; Toggle shadows
+HKFunc_ToggleSingleCellViewMode="N"                          ; Toggle single cell view mode
+HKFunc_ToggleSky="6"                                         ; Toggle sky
+HKFunc_ToggleSoundMarkers="CTRL+N"                           ; Toggle sound markers
+HKFunc_ToggleTrees="ALT+T"                                   ; Toggle trees
+HKFunc_ToggleTrianglesSelectable="T"                         ; Toggle triangles selectable
+HKFunc_ToggleVerticesSelectable="V"                          ; Toggle vertices selectable
+HKFunc_ToggleWater="O"                                       ; Toggle water
+HKFunc_ToggleWaterCulling="SHIFT+W"                          ; Toggle water culling
+HKFunc_ToggleWireframe="7"                                   ; Toggle wireframe
+HKFunc_Undo="CTRL+Z"                                         ; Undo
+HKFunc_UnhideAllNavMeshes="CTRL+H"                           ; Unhide all navmeshes
+HKFunc_UnhideAllObjects="ALT+1"                              ; Unhide all hidden objects
 
 [CreationKit_Warnings]
 W0=Add new entries at the bottom of this list. Toggled by WarningBlacklist setting.
