--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -6,8 +6,7 @@
 [CreationKit]
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
-UIDarkTheme=false                   ; [Experimental] Enable dark theme. Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
-UIHotkeys=false                     ; [Experimental]
+UIHotkeys=false                     ; [Experimental] Allow rebinding certain window hotkeys. See [CreationKit_Hotkeys] section.
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
@@ -18,6 +17,7 @@ AllowMasterESP=true                 ; Allow ESP files to act as master files whi
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
+UIDarkTheme=false                   ; Enable dark theme. Requires a Windows theme with styling (Aero) to be enabled and may cause graphical problems.
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
 DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
@@ -38,6 +38,11 @@ FontSize=10                         ; Size in points
 FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
 OutputFile=none                     ; Print log output to a file (i.e. "log.txt"). May cause UI lag on slow hard drives. To disable, set the value to "none".
 
+;
+; Bind custom keys for the Render Window & Navmesh Edit Window. UIHotkeys must be enabled under [CreationKit].
+;
+; Allowed keys: A-Z, a-z, 0-9, ESC, DEL, TAB, and most symbols. Allowed modifiers: CTRL, SHIFT, and ALT. Spaces and quotes will be ignored.
+;
 [CreationKit_Hotkeys]
 HKFunc_AddPolygon="A"                                        ; Add a polygon
 HKFunc_AlignToPosition="CTRL+SHIFT+A"                        ; Align to position
@@ -148,8 +153,13 @@ HKFunc_Undo="CTRL+Z"                                         ; Undo
 HKFunc_UnhideAllNavMeshes="CTRL+H"                           ; Unhide all navmeshes
 HKFunc_UnhideAllObjects="ALT+1"                              ; Unhide all hidden objects
 
+;
+; Hide specific warnings or errors produced by the vanilla game/DLC ESM files.
+;
+; Add new entries at the bottom of this list. WarningBlacklist must be enabled under [CreationKit].
+;
 [CreationKit_Warnings]
-W0=Add new entries at the bottom of this list. Toggled by WarningBlacklist setting.
+W0=Placeholder entry
 W1=MASTERFILE: Potentially duplicate Land (000028df) encountered in file Dawnguard.esm.
 W2=MASTERFILE: Potentially duplicate Land (000028fd) encountered in file Dawnguard.esm.
 W3=QUESTS: Could not find previous info (02004DE6) for TopicInfo (02018B1D) in Topic "" (02004DAA).
